--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -61,4 +61,4 @@ jobs:
         run: cat main.py
 
       - name: Run flake8
-        run: echo "::error file=./main.py,line=1,col=7::[E201] whitespace after '('"
+        run: flake8 --format='::error file=%(path)s,line=%(row)d,col=%(col)d::[%(code)s] %(text)s'
