Format annotation differently

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -61,4 +61,4 @@ jobs:
         run: cat main.py
 
       - name: Run flake8
-        run: flake8 --format='::error file=%(path)s,line=%(row)d,col=%(col)d::[%(code)s] %(text)s'
+        run: "flake8 --format='::error file=%(path)s,line=%(row)d,col=%(col)d::**[flake8]** %(code)s: %(text)s'"
