--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
     types:
       - completed
 
-job:
+jobs:
   if: ${{ github.event.workflow_run.conclusion == 'success' }}
   build:
     name: Build, Push, & Deploy Container
