--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,8 +8,8 @@ on:
       - completed
 
 jobs:
-  if: ${{ github.event.workflow_run.conclusion == 'success' }}
   build:
+    if: github.event.workflow_run.conclusion == 'success'
     name: Build, Push, & Deploy Container
     runs-on: ubuntu-latest
 
