--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ flake8-tidy-imports = "~=4.1"
 flake8-todo = "~=0.7"
 pep8-naming = "~=0.11"
 pre-commit = "~=2.1"
+coverage = "~=5.3"
 
 [requires]
 python_version = "3.8"
