Add coveralls to dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ flake8-todo = "~=0.7"
 pep8-naming = "~=0.11"
 pre-commit = "~=2.1"
 coverage = "~=5.3"
+coveralls = "~=2.1"
 
 [requires]
 python_version = "3.8"
