Add PAT to dispatch workflows

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -72,4 +72,4 @@ jobs:
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: Build
-          token: ${{ github.token }}
+          token: ${{ secrets.DISPATCH_TOKEN }}
