--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,12 +3,14 @@ name: Build
 on:
   workflow_run:
     workflows: ["Lint"]
+    branches:
+      - master
     types:
       - completed
 
 jobs:
   build:
-    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event != 'pull_request'
+    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push'
     name: Build, Push, & Deploy Container
     runs-on: ubuntu-latest
 
