--- a/.github/workflows/core-developers-check.yaml
+++ b/.github/workflows/core-developers-check.yaml
@@ -12,7 +12,7 @@ jobs:
         id: get_reviewers
         with:
           query: |
-            query ($owner: String!, $repository: String!, $pr: Int!){
+            query ($owner: String!, $repository: String!, $pr: Int!) {
               repository(owner: $owner, name: $repository) {
                 pullRequest(number: $pr) {
                   latestOpinionatedReviews(last: 100, writersOnly: true) {
@@ -27,7 +27,7 @@ jobs:
               }
             }
           owner: ${{ github.event.repository.owner.name }}
-          repo: ${{ github.event.repository.name }}
+          $repository: ${{ github.event.repository.name }}
           pr: ${{ github.event.pull_request.pull_number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
