Remove double `query` from GraphQL as the first one is implicit

--- a/.github/workflows/core-developers-check.yaml
+++ b/.github/workflows/core-developers-check.yaml
@@ -12,7 +12,7 @@ jobs:
         id: get_reviewers
         with:
           query: |
-            query ($owner: String!, $repository: String!, $pr: Int!) {
+            ($owner: String!, $repository: String!, $pr: Int!) {
               repository(owner: $owner, name: $repository) {
                 pullRequest(number: $pr) {
                   latestOpinionatedReviews(last: 100, writersOnly: true) {
