--- a/.github/workflows/core-developers-check.yaml
+++ b/.github/workflows/core-developers-check.yaml
@@ -8,28 +8,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: octokit/graphql-action@v2.x
-        id: get_reviewers
-        with:
-          query: |
-            ($owner: String!, $repository: String!, $pr: Int!) {
-              repository(owner: $owner, name: $repository) {
-                pullRequest(number: $pr) {
-                  latestOpinionatedReviews(last: 100, writersOnly: true) {
-                    nodes{
-                      author{
-                        login
-                      }
-                      state
-                    }
-                  }
-                }
-              }
-            }
-          owner: ${{ github.event.repository.owner.name }}
-          repository: ${{ github.event.repository.name }}
-          pr: ${{ github.event.pull_request.pull_number }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: cat $GITHUB_EVENT_PATH
 
-      - run: "echo 'latest release: ${{ steps.get_reviewers.outputs.data }}'"
+#      - uses: octokit/graphql-action@v2.x
+#        id: get_reviewers
+#        with:
+#          query: |
+#            ($owner: String!, $repository: String!, $pr: Int!) {
+#              repository(owner: $owner, name: $repository) {
+#                pullRequest(number: $pr) {
+#                  latestOpinionatedReviews(last: 100, writersOnly: true) {
+#                    nodes{
+#                      author{
+#                        login
+#                      }
+#                      state
+#                    }
+#                  }
+#                }
+#              }
+#            }
+#          owner: ${{ github.event.repository.owner.name }}
+#          repository: ${{ github.event.repository.name }}
+#          pr: ${{ github.event.pull_request.pull_number }}
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#      - run: "echo 'latest release: ${{ steps.get_reviewers.outputs.data }}'"
