--- a/.github/workflows/core-developers-check.yaml
+++ b/.github/workflows/core-developers-check.yaml
@@ -37,4 +37,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
 
-      - run: "echo 'latest release: ${{ steps.get_reviewers.outputs.data }}'"
+      - run: >-
+        echo '${{ toJson(steps.get_reviewers.outputs.data).repository.latestOpinionatedReviews.nodes }}' |
+        jq '.[] | select(.state=="APPROVED")'
