Add organization team token to access team members

--- a/.github/workflows/core-developers-check.yaml
+++ b/.github/workflows/core-developers-check.yaml
@@ -52,7 +52,7 @@ jobs:
               }
             }
         env:
-          GITHUB_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TEAM_TOKEN }}
 
       - name: Setup python
         id: python
