--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -2,86 +2,141 @@ name: Core Developer Requirement
 
 on:
   pull_request_review:
-
+    types: [submitted, dismissed]
+  pull_request_target:
 
 jobs:
-  core-dev-check:
-    name: At least one core developer needs to accept the PR
+  register-check:
+    if: github.event_name == 'pull_request_target'
+    name: Register Core Developer Review Check
     runs-on: ubuntu-latest
 
     steps:
-      - run: cat $GITHUB_EVENT_PATH
-
-      - uses: octokit/graphql-action@v2.x
-        id: reviews
+      - name: List for existing checks
+        id: existing_checks
+        uses: octokit/request-action@v2.x
         with:
-          query: |
-            query ($repository: String!, $pr: Int!) {
-              repository(owner: "python-discord", name: $repository) {
-                pullRequest(number: $pr) {
-                  latestOpinionatedReviews(last: 100, writersOnly: true) {
-                    nodes{
-                      author{
-                        login
-                      }
-                      state
-                    }
-                  }
-                }
-              }
-            }
-          owner: ${{ github.event.repository.owner.login }}
-          pr: ${{ github.event.pull_request.number }}
+          route: GET /repos/:owner/:repository/commits/:ref/check-runs
+          owner: ${{ github.repository.owner.login }}
+          repository: ${{ github.repository }}
+          ref: ${{ github.sha }}
+          check_name: At least one core developer needs to approve this PR
         env:
-          GITHUB_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: octokit/graphql-action@v2.x
-        id: core_developers
-        with:
-          query: |
-            query {
-              organization(login: "python-discord") {
-                team(slug: "core-developers") {
-                  members(first: 100) {
-                    nodes {
-                      login
-                    }
-                  }
-                }
-              }
-            }
-        env:
-          GITHUB_TOKEN: ${{ secrets.TEAM_TOKEN }}
+      - name: Echo existing checks
+        run: echo '${{ steps.existing_checks.outputs.data }}'
 
-      - name: Setup python
-        id: python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
+#      - name: Register queued check run
+#        uses: octokit/request-action@v2.x
+#        with:
+#          route: POST /repos/:owner/:repository/check-runs
+#          owner: ${{ github.repository.owner.login }}
+#          repository: ${{ github.repository }}
+#          name: At least one core developer needs to approve this PR
+#          status: queued
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: |
-          echo '${{ steps.reviews.outputs.data }}'
-          echo '${{ steps.core_developers.outputs.data }}'
-
-      - run: |
-          python -c 'import json
-          reviews = json.loads("""${{ steps.reviews.outputs.data }}""")
-          reviewers = {
-              review["author"]["login"]
-              for review in reviews["repository"]["pullRequest"]["latestOpinionatedReviews"]["nodes"]
-              if review["state"] == "APPROVED"
-          }
-          core_devs = json.loads("""${{ steps.core_developers.outputs.data }}""")
-          core_devs = {
-              member["login"] for member in core_devs["organization"]["team"]["members"]["nodes"]
-          }
-          print(reviewers)
-          print(core_devs)
-          approving_core_devs = reviewers & core_devs
-          print(approving_core_devs)
-          if not approving_core_devs:
-              print("No approving Core Developers were found.")
-              exit(1)
-          '
-
-
+#  core-dev-check:
+#    if: github.event_name == 'pull_request_review'
+#    name: At least one core developer needs to accept the PR
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - run: cat $GITHUB_EVENT_PATH
+#
+#      - uses: octokit/graphql-action@v2.x
+#        id: reviews
+#        with:
+#          query: |
+#            query ($repository: String!, $pr: Int!) {
+#              repository(owner: "python-discord", name: $repository) {
+#                pullRequest(number: $pr) {
+#                  latestOpinionatedReviews(last: 100, writersOnly: true) {
+#                    nodes{
+#                      author{
+#                        login
+#                      }
+#                      state
+#                    }
+#                  }
+#                }
+#              }
+#            }
+#          repository: ${{ github.event.repository.name }}
+#          pr: ${{ github.event.pull_request.number }}
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
+#
+#      - uses: octokit/graphql-action@v2.x
+#        id: core_developers
+#        with:
+#          query: |
+#            query {
+#              organization(login: "python-discord") {
+#                team(slug: "core-developers") {
+#                  members(first: 100) {
+#                    nodes {
+#                      login
+#                    }
+#                  }
+#                }
+#              }
+#            }
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.TEAM_TOKEN }}
+#
+#      - name: Setup python
+#        id: python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.9'
+#
+#      - run: |
+#          echo '${{ steps.reviews.outputs.data }}'
+#          echo '${{ steps.core_developers.outputs.data }}'
+#
+#      - name: Check for Accepting Core Developers
+#        id: core_dev_acceptance
+#        run: |
+#          python -c 'import json
+#          reviews = json.loads("""${{ steps.reviews.outputs.data }}""")
+#          reviewers = {
+#              review["author"]["login"]
+#              for review in reviews["repository"]["pullRequest"]["latestOpinionatedReviews"]["nodes"]
+#              if review["state"] == "APPROVED"
+#          }
+#          core_devs = json.loads("""${{ steps.core_developers.outputs.data }}""")
+#          core_devs = {
+#              member["login"] for member in core_devs["organization"]["team"]["members"]["nodes"]
+#          }
+#          approving_core_devs = reviewers & core_devs
+#          approval = "true" if approving_core_devs else "false"
+#          print(f"::set-output name=accepted::{approval}")
+#          '
+#
+#      - name: Register queued check
+#        if: steps.core_dev_acceptance.outputs.approval == 'false'
+#        uses: octokit/request-action@v2.x
+#        with:
+#          route: POST /repos/:owner/:repository/check-runs
+#          owner: ${{ github.repository.owner.login }}
+#          repository: ${{ github.repository }}
+#          name: At least one core developer needs to approve this PR
+#          status: queued
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#      - name: Register accepted check
+#        if: steps.core_dev_acceptance.outputs.approval == 'true'
+#        uses: octokit/request-action@v2.x
+#        with:
+#          route: POST /repos/:owner/:repository/check-runs
+#          owner: ${{ github.repository.owner.login }}
+#          repository: ${{ github.repository }}
+#          name: At least one core developer needs to approve this PR
+#          status: completed
+#          conclusion: success
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
