--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -34,6 +34,7 @@ jobs:
           repository: ${{ github.repository }}
           name: At least one core developer needs to approve this PR
           status: queued
+          head_sha: {{ github.sha }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
