--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -32,7 +32,7 @@ jobs:
         with:
           route: POST /repos/:repository/check-runs
           repository: ${{ github.repository }}
-          head_sha: ${{ github.sha }}
+          head_sha: ${{github.event.pull_request.head.ref}}
           name: At least one core developer needs to approve this PR
           status: queued
         env:
