--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -23,9 +23,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Echo existing checks
-        run: echo '${{ steps.existing_checks.outputs.data }}'
+        run: |
+          echo '${{ steps.existing_checks.outputs.data }}'
+          echo 'toJson(steps.existing_checks.outputs.data).total_count'
 
       - name: Register queued check run
+        id: register_check
         if: toJson(steps.existing_checks.outputs.data).total_count == 0
         uses: octokit/request-action@v2.x
         with:
@@ -37,8 +40,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Echo existing checks
-        run: echo '${{ steps.existing_checks.outputs.data }}'
+      - name: Echo return value
+        run: echo '${{ steps.register_check.outputs.data }}'
 
   core-dev-check:
     if: github.event_name == 'pull_request_review'
