--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Echo existing checks
         run: |
           echo '${{ steps.existing_checks.outputs.data }}'
-          echo 'toJson(steps.existing_checks.outputs.data).total_count'
+          echo '${{ toJson(steps.existing_checks.outputs.data).total_count }}'
 
       - name: Register queued check run
         id: register_check
