--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -24,11 +24,11 @@ jobs:
 
       - name: Echo existing checks
         run: |
-          echo 'Total count: ${{ toJson(steps.existing_checks.outputs.data).total_count }}'
+          echo 'Total count: ${{ fromJson(steps.existing_checks.outputs.data).total_count }}'
 
       - name: Register queued check run
         id: register_check
-        if: toJson(steps.existing_checks.outputs.data).total_count == 0
+        if: fromJson(steps.existing_checks.outputs.data).total_count == 0
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/:repository/check-runs
