--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Set check ID environment variable
         if: fromJson(steps.existing_checks.outputs.data).total_count > 0
         run: |
-          echo "CHECK_ID=${{ fromJson(steps.existing_checks.outputs.data).check_runs[0].id }}}" >> $GITHUB_ENV
+          echo "CHECK_ID=${{ fromJson(steps.existing_checks.outputs.data).check_runs[0].id }}" >> $GITHUB_ENV
 
       - name: Register queued check run
         id: register_check
@@ -44,120 +44,98 @@ jobs:
       - name: Set check ID environment variable
         if: fromJson(steps.existing_checks.outputs.data).total_count == 0
         run: |
-          echo "CHECK_ID=${{ fromJson(steps.register_check.outputs.data).id }}}" >> $GITHUB_ENV
+          echo "CHECK_ID=${{ fromJson(steps.register_check.outputs.data).id }}" >> $GITHUB_ENV
 
       - name: Echo return value
         run: echo "Check ID ${{ env.CHECK_ID }}"
 
-#      - run: cat $GITHUB_EVENT_PATH
-#
-#      - uses: octokit/graphql-action@v2.x
-#        id: reviews
-#        with:
-#          query: |
-#            query ($repository: String!, $pr: Int!) {
-#              repository(owner: "python-discord", name: $repository) {
-#                pullRequest(number: $pr) {
-#                  latestOpinionatedReviews(last: 100, writersOnly: true) {
-#                    nodes{
-#                      author{
-#                        login
-#                      }
-#                      state
-#                    }
-#                  }
-#                }
-#              }
-#            }
-#          repository: bot
-#          pr: 1202
-##          repository: ${{ github.event.repository.name }}
-##          pr: ${{ github.event.pull_request.number }}
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
-#
-#      - uses: octokit/graphql-action@v2.x
-#        id: core_developers
-#        with:
-#          query: |
-#            query {
-#              organization(login: "python-discord") {
-#                team(slug: "core-developers") {
-#                  members(first: 100) {
-#                    nodes {
-#                      login
-#                    }
-#                  }
-#                }
-#              }
-#            }
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.TEAM_TOKEN }}
-#
-#      - name: Setup python
-#        id: python
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: '3.9'
-#
-#      - run: |
-#          echo '${{ steps.reviews.outputs.data }}'
-#          echo '${{ steps.core_developers.outputs.data }}'
-#
-#      - name: Check for Accepting Core Developers
-#        id: core_dev_acceptance
-#        run: |
-#          python -c 'import json
-#          reviews = json.loads("""${{ steps.reviews.outputs.data }}""")
-#          reviewers = {
-#              review["author"]["login"]
-#              for review in reviews["repository"]["pullRequest"]["latestOpinionatedReviews"]["nodes"]
-#              if review["state"] == "APPROVED"
-#          }
-#          core_devs = json.loads("""${{ steps.core_developers.outputs.data }}""")
-#          core_devs = {
-#              member["login"] for member in core_devs["organization"]["team"]["members"]["nodes"]
-#          }
-#          approving_core_devs = reviewers & core_devs
-#          approval = "true" if approving_core_devs else "false"
-#          print(f"::set-output name=accepted::{approval}")
-#          '
+      - uses: octokit/graphql-action@v2.x
+        id: reviews
+        with:
+          query: |
+            query ($repository: String!, $pr: Int!) {
+              repository(owner: "python-discord", name: $repository) {
+                pullRequest(number: $pr) {
+                  latestOpinionatedReviews(last: 100, writersOnly: true) {
+                    nodes{
+                      author{
+                        login
+                      }
+                      state
+                    }
+                  }
+                }
+              }
+            }
+          repository: bot
+          pr: 1202
+#          repository: ${{ github.event.repository.name }}
+#          pr: ${{ github.event.pull_request.number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
 
-      - name: List existing checks
-        id: list_checks
+      - uses: octokit/graphql-action@v2.x
+        id: core_developers
+        with:
+          query: |
+            query {
+              organization(login: "python-discord") {
+                team(slug: "core-developers") {
+                  members(first: 100) {
+                    nodes {
+                      login
+                    }
+                  }
+                }
+              }
+            }
+        env:
+          GITHUB_TOKEN: ${{ secrets.TEAM_TOKEN }}
+
+      - name: Setup python
+        id: python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - name: Check for Accepting Core Developers
+        id: core_dev_acceptance
+        run: |
+          python -c 'import json
+          reviews = json.loads("""${{ steps.reviews.outputs.data }}""")
+          reviewers = {
+              review["author"]["login"]
+              for review in reviews["repository"]["pullRequest"]["latestOpinionatedReviews"]["nodes"]
+              if review["state"] == "APPROVED"
+          }
+          core_devs = json.loads("""${{ steps.core_developers.outputs.data }}""")
+          core_devs = {
+              member["login"] for member in core_devs["organization"]["team"]["members"]["nodes"]
+          }
+          approving_core_devs = reviewers & core_devs
+          approval = "true" if approving_core_devs else "false"
+          print(f"::set-output name=accepted::{approval}")
+          '
+
+      - name: Change check to "queued" status
+        if: steps.core_dev_acceptance.outputs.approval == 'false'
         uses: octokit/request-action@v2.x
         with:
-          route: GET /repos/:repository/commits/:ref/check-runs
+          route: PATCH /repos/:repository/check-runs/:run-id
           repository: ${{ github.repository }}
-          ref: ${{github.event.pull_request.head.ref}}
-          check_name: At least one core developer needs to approve this PR
+          run-id: ${{ env.CHECK_ID }}
+          status: queued
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Echo existing checks
-        run: echo '${{ steps.list_checks.outputs.data }}'
-
-#      - name: Register queued check
-#        if: steps.core_dev_acceptance.outputs.approval == 'false'
-#        uses: octokit/request-action@v2.x
-#        with:
-#          route: POST /repos/:owner/:repository/check-runs
-#          owner: ${{ github.repository.owner.login }}
-#          repository: ${{ github.repository }}
-#          name: At least one core developer needs to approve this PR
-#          status: queued
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Register accepted check
-#        if: steps.core_dev_acceptance.outputs.approval == 'true'
-#        uses: octokit/request-action@v2.x
-#        with:
-#          route: POST /repos/:owner/:repository/check-runs
-#          owner: ${{ github.repository.owner.login }}
-#          repository: ${{ github.repository }}
-#          name: At least one core developer needs to approve this PR
-#          status: completed
-#          conclusion: success
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Change check to "completed" status
+        if: steps.core_dev_acceptance.outputs.approval == 'true'
+        uses: octokit/request-action@v2.x
+        with:
+          route: PATCH /repos/:repository/check-runs/:run-id
+          repository: ${{ github.repository }}
+          run-id: ${{ env.CHECK_ID }}
+          status: completed
+          conclusion: success
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
