--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -143,7 +143,7 @@ jobs:
 
       - run: echo '${{ steps.check_completed.outputs.data }}'
 
-      - name: Change check to "completed" status
+      - name: List Check Suites
         id: list_check_suites
         uses: octokit/request-action@v2.x
         with:
@@ -153,4 +153,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: echo '${{ steps.list_check_suites.outputs.data }}'
+      - run: |
+          echo 'suites: ${{ steps.list_check_suites.outputs.data }}'
