--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -153,5 +153,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: |
-          echo 'suites: ${{ steps.list_check_suites.outputs.data }}'
+      - run: echo '${{ steps.list_check_suites.outputs.data }}'
